Add List Wheel Command

--- a/.gitignore
+++ b/.gitignore
@@ -177,3 +177,8 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+/.vs/discord-bot/FileContentIndex
+/.vs/discord-bot/v17
+/.vs/discord-bot/config
+*.json
+/.vs
