--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,7 @@
   },
   "rules": {
     "indent": ["error", 2, {"SwitchCase": 1, "MemberExpression": 0}],
-    "linebreak-style": ["error", "unix"],
+    "linebreak-style": ["error", "windows"],
     "semi": ["error", "always"],
     "eqeqeq": ["warn", "always"],
     "curly": "error",
