--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "node": ">= 16.0.0"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "discord.js": "^13.7.0",
     "dotenv": "^16.0.1",
     "lodash": "^4.17.21"
